# nix-cuda-test

./: .gitignore  README.md  ci.nix  flake.nix  flash-attn.nix  overlay.nix  pyproject.toml  transformer-engine.nix
.github/actions/nix-path-info-markdown-table/: action.yaml
.github/actions/nix-setup/: action.yml
.github/actions/setup-attic/: action.yaml
.github/scripts/: lambda_vm.py
.github/scripts/lambda_vm/: __main__.py  paths.py  requirements.txt
.github/scripts/lambda_vm/components/: request_bodies.py  responses.py  schemas.py
.github/workflows/: azure-vm-create.yaml  azure-vm-run.yaml  azure-vm-setup.yaml.bak  azure-vm.yaml  lambda-tests.yaml  lambda-vm.yaml  nix-vhd.yaml
ci/: azure-check-for-instance.sh  user-data-Standard_HB120rs_v3.sh
nix/: default.nix  options.nix
nix/apps/: default.nix  torch-collect-env.nix  xformers-info.nix
nix/devShells/: default.nix
nix/nixosConfigurations/: default.nix
nix/nixosModules/: azure.nix  default.nix
nix/nixosModules/systemd/services/: fix-tmp-permissions.nix  mount-nvmes.nix
nix_cuda_test/: __main__.py  cifar_data_module.py  utils.py  vit.py  wrapped_vit.py
nixosModules/: default.nix
