[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nix_cuda_test"
version = "0.1.0"
authors = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
description = "Test project for Nix CUDA support"
requires-python = ">=3.10"
keywords = ["nix", "machine", "learning", "torch", "gpu", "test", "cuda"]
license = { text = "BSD-3-Clause" }
dependencies = [
    "click>=8.1.3",
    "pydantic>=1.10.8",
    "torch>=2.0",
    "torchvision>=0.15.0",
    "triton>=2.0",
]

[project.optional-dependencies]
dev = ["black>=21.9b0", "mypy>=0.910", "ruff>=0.3.0"]

[project.scripts]
nix-cuda-test = "nix_cuda_test.__main__:main"

[tool.black]
line-length = 120

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
line-length = 120
